--- a/gradle.properties
+++ b/gradle.properties
@@ -50,6 +50,7 @@ dep.cloud-brigadier=cloud.commandframework:cloud-brigadier:1.8.0
 dep.cloud-tasks=cloud.commandframework:cloud-tasks:1.8.0
 dep.cloud-minecraft-extras=cloud.commandframework:cloud-minecraft-extras:1.8.0
 dep.javassist=org.javassist:javassist:3.29.2-GA
+dep.snakeyaml=org.yaml:snakeyaml:1.30
 dep.log4j=org.apache.logging.log4j:log4j-core:2.19.0
 dep.slf4j=org.slf4j:slf4j-simple:2.0.6
 dep.brigadier=com.mojang:brigadier:1.0.500
