--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ org.gradle.jvmargs=\
   --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
 
 shade.package=io.github.portlek.realm.shaded
-relocations=
+relocations=cloud.commandframework,tr.com.infumia,org.spongepowered,dev.morphia,org.mariadb.jdbc,io.leangen.geantyref
 
 # Dependencies
 dep.lombok=org.projectlombok:lombok:1.18.24
@@ -38,7 +38,6 @@ dep.configurate-jackson=org.spongepowered:configurate-jackson:4.2.0-SNAPSHOT
 dep.configurate-yaml=org.spongepowered:configurate-yaml:4.2.0-SNAPSHOT
 dep.guava=com.google.guava:guava:31.1-jre
 dep.caffeine=com.github.ben-manes.caffeine:guava:3.1.2
-dep.guice=com.google.inject:guice:5.1.0
 dep.protobuf=com.google.protobuf:protobuf-java:3.21.12
 dep.paper=io.papermc.paper:paper-api:1.19.2-R0.1-SNAPSHOT
 dep.jackson-databind=com.fasterxml.jackson.core:jackson-databind:2.14.2
