--- a/paper/plugin/gradle.properties
+++ b/paper/plugin/gradle.properties
@@ -1,6 +1,6 @@
 project.name=realm-format-paper-plugin
 
 shadow.enabled=true
-shadow.relocations=true
+shadow.relocation=true
 smol.enabled=true
-smol.relocations=true
+smol.relocation=true
