--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,8 @@ version=1.0.0-SNAPSHOT
 
 spotless.apply=false
 
+dev=true
+
 org.gradle.parallel=true
 org.gradle.jvmargs=\
   --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
