--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -40,6 +40,8 @@ jobs:
 
       - uses: release-drafter/release-drafter@master
         id: release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - run: |
           [[ "${{ steps.release.outputs.tag_name }}" =~ ^[0-9]+(\.[0-9]+)*$ ]] || exit -1
