--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,7 @@ dep.task-common=tr.com.infumia:TaskCommon:0.1.4
 dep.task-bukkit=tr.com.infumia:TaskBukkit:0.1.4
 dep.event-common=tr.com.infumia:EventCommon:0.1.3
 dep.event-paper=tr.com.infumia:EventPaper:0.1.3
+dep.versionmatched=tr.com.infumia:versionmatched:0.1.6-SNAPSHOT
 dep.redis=io.lettuce:lettuce-core:6.2.2.RELEASE
 dep.hikari=com.zaxxer:HikariCP:5.0.1
 dep.jdbi-core=org.jdbi:jdbi3-core:3.36.0
