--- a/gradle.properties
+++ b/gradle.properties
@@ -26,6 +26,8 @@ dep.task-bukkit=tr.com.infumia:TaskBukkit:0.1.4
 dep.event-common=tr.com.infumia:EventCommon:0.1.3
 dep.event-paper=tr.com.infumia:EventPaper:0.1.3
 dep.versionmatched=tr.com.infumia:versionmatched:0.1.6-SNAPSHOT
+dep.nbt=io.github.shiruka:nbt:2.0.1-SNAPSHOT
+dep.zstd=com.github.luben:zstd-jni:1.5.2-5
 dep.redis=io.lettuce:lettuce-core:6.2.2.RELEASE
 dep.hikari=com.zaxxer:HikariCP:5.0.1
 dep.jdbi-core=org.jdbi:jdbi3-core:3.36.0
@@ -38,7 +40,6 @@ dep.mariadb=org.mariadb.jdbc:mariadb-java-client:3.1.2
 dep.adventure-configurate=net.kyori:adventure-serializer-configurate4:4.12.0
 dep.configurate-yaml=org.spongepowered:configurate-yaml:4.2.0-SNAPSHOT
 dep.caffeine=com.github.ben-manes.caffeine:guava:3.1.2
-dep.protobuf=com.google.protobuf:protobuf-java:3.21.12
 dep.paper=io.papermc.paper:paper-api:1.19.2-R0.1-SNAPSHOT
 dep.cloud-core=cloud.commandframework:cloud-core:1.8.0
 dep.cloud-annotations=cloud.commandframework:cloud-annotations:1.8.0
