--- a/gradle.properties
+++ b/gradle.properties
@@ -30,7 +30,8 @@ dep.nbt=io.github.shiruka:nbt:2.0.1-SNAPSHOT
 dep.zstd=com.github.luben:zstd-jni:1.5.2-5
 dep.redis=io.lettuce:lettuce-core:6.2.2.RELEASE
 dep.hikari=com.zaxxer:HikariCP:5.0.1
-dep.morphia=dev.morphia.morphia:morphia-core:2.3.0
+dep.mongodb=org.mongodb:mongodb-driver-sync:4.8.2
+dep.commonsio=commons-io:commons-io:2.11.0
 dep.mariadb=org.mariadb.jdbc:mariadb-java-client:3.1.2
 dep.adventure-configurate=net.kyori:adventure-serializer-configurate4:4.12.0
 dep.configurate-yaml=org.spongepowered:configurate-yaml:4.2.0-SNAPSHOT
