--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ org.gradle.jvmargs=\
   --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
 
 shade.package=io.github.portlek.realm.shaded
-relocations=cloud.commandframework,tr.com.infumia,org.spongepowered,dev.morphia,org.mariadb.jdbc,io.leangen.geantyref
+relocations=cloud.commandframework,tr.com.infumia,org.spongepowered,dev.morphia,org.mariadb.jdbc,io.leangen.geantyref,io.github.shiruka
 
 # Dependencies
 dep.lombok=org.projectlombok:lombok:1.18.24
