remove old classes.

--- a/gradle.properties
+++ b/gradle.properties
@@ -28,6 +28,7 @@ dep.event-paper=tr.com.infumia:EventPaper:0.1.3
 dep.versionmatched=tr.com.infumia:versionmatched:0.1.6-SNAPSHOT
 dep.nbt=io.github.shiruka:nbt:2.0.1-SNAPSHOT
 dep.zstd=com.github.luben:zstd-jni:1.5.2-5
+dep.fastutil=it.unimi.dsi:fastutil:8.5.11
 dep.redis=io.lettuce:lettuce-core:6.2.2.RELEASE
 dep.hikari=com.zaxxer:HikariCP:5.0.1
 dep.mongodb=org.mongodb:mongodb-driver-sync:4.8.2
