--- a/gradle.properties
+++ b/gradle.properties
@@ -45,4 +45,6 @@ dep.cloud-tasks=cloud.commandframework:cloud-tasks:1.8.0
 dep.cloud-minecraft-extras=cloud.commandframework:cloud-minecraft-extras:1.8.0
 dep.javassist=org.javassist:javassist:3.29.2-GA
 dep.snakeyaml=org.yaml:snakeyaml:1.33
+dep.junit.api=org.junit.jupiter:junit-jupiter-api:5.9.2
+dep.junit.engine=org.junit.jupiter:junit-jupiter-engine:5.9.2
 dep.smol=io.github.portlek:smol:0.2.2-SNAPSHOT
