--- a/gradle.properties
+++ b/gradle.properties
@@ -28,10 +28,12 @@ dep.event-paper=tr.com.infumia:EventPaper:0.1.3
 dep.versionmatched=tr.com.infumia:versionmatched:0.1.6-SNAPSHOT
 dep.nbt=io.github.shiruka:nbt:2.0.1-SNAPSHOT
 dep.zstd=com.github.luben:zstd-jni:1.5.2-5
+dep.fastutil=it.unimi.dsi:fastutil:8.5.11
 dep.redis=io.lettuce:lettuce-core:6.2.2.RELEASE
 dep.hikari=com.zaxxer:HikariCP:5.0.1
 dep.mongodb=org.mongodb:mongodb-driver-sync:4.8.2
 dep.commonsio=commons-io:commons-io:2.11.0
+dep.guava=com.google.guava:guava:31.1-jre
 dep.mariadb=org.mariadb.jdbc:mariadb-java-client:3.1.2
 dep.adventure-configurate=net.kyori:adventure-serializer-configurate4:4.12.0
 dep.configurate-yaml=org.spongepowered:configurate-yaml:4.2.0-SNAPSHOT
@@ -44,4 +46,6 @@ dep.cloud-tasks=cloud.commandframework:cloud-tasks:1.8.0
 dep.cloud-minecraft-extras=cloud.commandframework:cloud-minecraft-extras:1.8.0
 dep.javassist=org.javassist:javassist:3.29.2-GA
 dep.snakeyaml=org.yaml:snakeyaml:1.33
+dep.junit.api=org.junit.jupiter:junit-jupiter-api:5.9.2
+dep.junit.engine=org.junit.jupiter:junit-jupiter-engine:5.9.2
 dep.smol=io.github.portlek:smol:0.2.2-SNAPSHOT
