add more testse.

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,13 +26,15 @@ dep.task-bukkit=tr.com.infumia:TaskBukkit:0.1.4
 dep.event-common=tr.com.infumia:EventCommon:0.1.3
 dep.event-paper=tr.com.infumia:EventPaper:0.1.3
 dep.versionmatched=tr.com.infumia:versionmatched:0.1.6-SNAPSHOT
-dep.nbt=io.github.shiruka:nbt:2.0.1-SNAPSHOT
+dep.nbt=io.github.shiruka:nbt:1.0.0-SNAPSHOT
+#dep.nbt=io.github.shiruka:nbt:2.0.1-SNAPSHOT
 dep.zstd=com.github.luben:zstd-jni:1.5.2-5
 dep.fastutil=it.unimi.dsi:fastutil:8.5.11
 dep.redis=io.lettuce:lettuce-core:6.2.2.RELEASE
 dep.hikari=com.zaxxer:HikariCP:5.0.1
 dep.mongodb=org.mongodb:mongodb-driver-sync:4.8.2
 dep.commonsio=commons-io:commons-io:2.11.0
+dep.commonslang=org.apache.commons:commons-lang3:3.12.0
 dep.guava=com.google.guava:guava:31.1-jre
 dep.mariadb=org.mariadb.jdbc:mariadb-java-client:3.1.2
 dep.adventure-configurate=net.kyori:adventure-serializer-configurate4:4.12.0
