--- a/gradle.properties
+++ b/gradle.properties
@@ -33,6 +33,7 @@ dep.redis=io.lettuce:lettuce-core:6.2.2.RELEASE
 dep.hikari=com.zaxxer:HikariCP:5.0.1
 dep.mongodb=org.mongodb:mongodb-driver-sync:4.8.2
 dep.commonsio=commons-io:commons-io:2.11.0
+dep.commonslang=org.apache.commons:commons-lang3:3.12.0
 dep.guava=com.google.guava:guava:31.1-jre
 dep.mariadb=org.mariadb.jdbc:mariadb-java-client:3.1.2
 dep.adventure-configurate=net.kyori:adventure-serializer-configurate4:4.12.0
