--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,10 @@ org.gradle.jvmargs=\
 shade.package=io.github.portlek.realm.shaded
 relocations=cloud.commandframework,tr.com.infumia,org.spongepowered,dev.morphia,org.mariadb.jdbc,io.leangen.geantyref,io.github.shiruka
 
-# Dependencies
+# Minecraft Dependencies
+dep.paper=io.papermc.paper:paper-api:1.19.3-R0.1-SNAPSHOT
+
+# Other Dependencies
 dep.lombok=org.projectlombok:lombok:1.18.26
 dep.annotations=org.jetbrains:annotations:24.0.0
 dep.terminable=tr.com.infumia:terminable:0.1.4-SNAPSHOT
@@ -38,7 +41,6 @@ dep.guava=com.google.guava:guava:31.1-jre
 dep.mariadb=org.mariadb.jdbc:mariadb-java-client:3.1.2
 dep.adventure-configurate=net.kyori:adventure-serializer-configurate4:4.12.0
 dep.configurate-yaml=org.spongepowered:configurate-yaml:4.2.0-SNAPSHOT
-dep.paper=io.papermc.paper:paper-api:1.19.2-R0.1-SNAPSHOT
 dep.cloud-core=cloud.commandframework:cloud-core:1.8.0
 dep.cloud-annotations=cloud.commandframework:cloud-annotations:1.8.0
 dep.cloud-paper=cloud.commandframework:cloud-paper:1.8.0
