--- a/paper/plugin/src/main/resources/plugin.yml
+++ b/paper/plugin/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 ---
 name: "RealmFormat"
-main: "io.github.portlek.realmformat.paper.RealmBoostrap"
+main: "io.github.portlek.realmformat.paper.RealmFormatBoostrap"
 version: "${pluginVersion}"
 api-version: 1.13
