build, add spotless check.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,4 +25,4 @@ jobs:
         key: "${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle-wrapper.properties')\
           \ }}"
         restore-keys: "${{ runner.os }}-gradlew-\n"
-    - run: "chmod +x gradlew\n./gradlew build\n"
+    - run: "chmod +x gradlew\n./gradlew build -Pspotless.apply=true\n"
