--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,11 +30,12 @@ jobs:
         gpg_private_key: "${{ secrets.GPG_PRIVATE_KEY }}"
         passphrase: "${{ secrets.GPG_PASSPHRASE }}"
     - run: "[[ \"${{ github.event.release.tag_name }}\" =~ ^[0-9]+(\\.[0-9]+)*$ ]]\
-        \ || exit -1\nchmod +x gradlew\n./gradlew -Pdev=false publishToSonatype closeAndReleaseSonatypeStagingRepository\
-        \ -Pversion=\"${{ github.event.release.tag_name }}\" -Psigning.gnupg.keyName=\"\
-        ${{ secrets.GPG_SECRET_KEY_ID }}\" -Psigning.gnupg.passphrase=\"${{ secrets.GPG_PASSPHRASE\
-        \ }}\" -PsonatypeUsername=\"${{ secrets.SONATYPE_USERNAME }}\" -PsonatypePassword=\"\
-        ${{ secrets.SONATYPE_PASSWORD }}\"\n"
+        \ || exit -1\nchmod +x gradlew\n./gradlew build -Pspotless.apply=true\n./gradlew\
+        \ -Pdev=false publishToSonatype closeAndReleaseSonatypeStagingRepository -Pversion=\"\
+        ${{ github.event.release.tag_name }}\" -Psigning.gnupg.keyName=\"${{ secrets.GPG_SECRET_KEY_ID\
+        \ }}\" -Psigning.gnupg.passphrase=\"${{ secrets.GPG_PASSPHRASE }}\" -PsonatypeUsername=\"\
+        ${{ secrets.SONATYPE_USERNAME }}\" -PsonatypePassword=\"${{ secrets.SONATYPE_PASSWORD\
+        \ }}\"\n"
     - uses: "softprops/action-gh-release@v1"
       with:
         files: "paper/plugin/build/libs/realm-format-paper-plugin-${{ github.event.release.tag_name\
