--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -35,8 +35,9 @@ jobs:
       env:
         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
     - run: "[[ \"${{ steps.release.outputs.tag_name }}\" =~ ^[0-9]+(\\.[0-9]+)*$ ]]\
-        \ || exit -1\nchmod +x gradlew\n./gradlew -Pdev=false publishToSonatype closeAndReleaseSonatypeStagingRepository\
-        \ -Pversion=\"${{ steps.release.outputs.tag_name }}-SNAPSHOT\" -Psigning.gnupg.keyName=\"\
+        \ || exit -1\nchmod +x gradlew\n./gradlew -Pspotless.apply=true -Pdev=false\
+        \ publishToSonatype closeAndReleaseSonatypeStagingRepository -Pversion=\"\
+        ${{ steps.release.outputs.tag_name }}-SNAPSHOT\" -Psigning.gnupg.keyName=\"\
         ${{ secrets.GPG_SECRET_KEY_ID }}\" -Psigning.gnupg.passphrase=\"${{ secrets.GPG_PASSPHRASE\
         \ }}\" -PsonatypeUsername=\"${{ secrets.SONATYPE_USERNAME }}\" -PsonatypePassword=\"\
         ${{ secrets.SONATYPE_PASSWORD }}\"\n"
