--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -2,7 +2,7 @@
 name-template: "$RESOLVED_VERSION"
 tag-template: "$RESOLVED_VERSION"
 prerelease: true
-template: "# What's Changed\n\n$CHANGES\n"
+template: "# Release Notes\n\nThis release includes the following changes:$CHANGES\n"
 categories:
 - title: "Breaking 🔥"
   label: "breaking"
