--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,8 +1,8 @@
 ---
-name-template: "$RESOLVED_VERSION"
+name-template: "$RESOLVED_VERSION 📈"
 tag-template: "$RESOLVED_VERSION"
 prerelease: true
-template: "# Release Notes\n\n## Uncategoried changes 🤷‍♀️\n$CHANGES\n"
+template: "# Release Notes 📃\n\n## Uncategoried changes 🤷‍♀️\n$CHANGES\n"
 categories:
 - title: "Breaking 🔥"
   label: "breaking"
