--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,28 +1,31 @@
 ---
-name: "Build"
+name: Build
 "on":
   pull_request:
     branches:
-    - "master"
+    - master
 jobs:
   build:
-    name: "Build"
-    runs-on: "ubuntu-latest"
+    name: Build
+    runs-on: ubuntu-latest
     steps:
-    - uses: "actions/checkout@v3"
-    - uses: "actions/setup-java@v3"
+    - uses: actions/checkout@v3
+    - uses: actions/setup-java@v3
       with:
-        distribution: "adopt"
-        java-version: "17"
-    - uses: "actions/cache@v3"
+        distribution: adopt
+        java-version: 17
+    - uses: actions/cache@v3
       with:
         path: "~/.gradle/caches"
         key: "${{ runner.os }}-gradle-cache-${{ hashFiles('**/*.gradle.kts') }}"
-        restore-keys: "${{ runner.os }}-gradle-\n"
-    - uses: "actions/cache@v3"
+        restore-keys: |
+          ${{ runner.os }}-gradle-
+    - uses: actions/cache@v3
       with:
         path: "~/.gradle/wrapper"
-        key: "${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle-wrapper.properties')\
-          \ }}"
-        restore-keys: "${{ runner.os }}-gradlew-\n"
-    - run: "chmod +x gradlew\n./gradlew build -Pspotless.apply=true\n"
+        key: "${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle-wrapper.properties') }}"
+        restore-keys: |
+          ${{ runner.os }}-gradlew-
+    - run: |
+        chmod +x gradlew
+        ./gradlew build -Pspotless.apply=true
