--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,42 +1,42 @@
 ---
-name: "Release"
+name: Release
 "on":
   release:
     types:
-    - "released"
+    - released
 jobs:
   build:
-    name: "Release"
-    runs-on: "ubuntu-latest"
+    name: Release
+    runs-on: ubuntu-latest
     steps:
-    - uses: "actions/checkout@v3"
-    - uses: "actions/setup-java@v3"
+    - uses: actions/checkout@v3
+    - uses: actions/setup-java@v3
       with:
-        distribution: "adopt"
-        java-version: "17"
-    - uses: "actions/cache@v3"
+        distribution: adopt
+        java-version: 17
+    - uses: actions/cache@v3
       with:
         path: "~/.gradle/caches"
         key: "${{ runner.os }}-gradle-cache-${{ hashFiles('**/*.gradle.kts') }}"
-        restore-keys: "${{ runner.os }}-gradle-\n"
-    - uses: "actions/cache@v3"
+        restore-keys: |
+          ${{ runner.os }}-gradle-
+    - uses: actions/cache@v3
       with:
         path: "~/.gradle/wrapper"
-        key: "${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle-wrapper.properties')\
-          \ }}"
-        restore-keys: "${{ runner.os }}-gradlew-\n"
-    - uses: "crazy-max/ghaction-import-gpg@v5.2.0"
+        key: "${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle-wrapper.properties') }}"
+        restore-keys: |
+          ${{ runner.os }}-gradlew-
+    - uses: crazy-max/ghaction-import-gpg@v5.2.0
       with:
         gpg_private_key: "${{ secrets.GPG_PRIVATE_KEY }}"
         passphrase: "${{ secrets.GPG_PASSPHRASE }}"
-    - run: "[[ \"${{ github.event.release.tag_name }}\" =~ ^[0-9]+(\\.[0-9]+)*$ ]]\
-        \ || exit -1\nchmod +x gradlew\n./gradlew build -Pspotless.apply=true\n./gradlew\
-        \ -Pdev=false publishToSonatype closeAndReleaseSonatypeStagingRepository -Pversion=\"\
-        ${{ github.event.release.tag_name }}\" -Psigning.gnupg.keyName=\"${{ secrets.GPG_SECRET_KEY_ID\
-        \ }}\" -Psigning.gnupg.passphrase=\"${{ secrets.GPG_PASSPHRASE }}\" -PsonatypeUsername=\"\
-        ${{ secrets.SONATYPE_USERNAME }}\" -PsonatypePassword=\"${{ secrets.SONATYPE_PASSWORD\
-        \ }}\"\n"
-    - uses: "softprops/action-gh-release@v1"
+    - run: |
+        [[ "${{ github.event.release.tag_name }}" =~ ^[0-9]+(\.[0-9]+)*$ ]] || exit -1
+        chmod +x gradlew
+        ./gradlew -Pversion="${{ github.event.release.tag_name }}" build -Pspotless.apply=true
+        ./gradlew -Pversion="${{ github.event.release.tag_name }}" -Pdev=false publishToSonatype closeAndReleaseSonatypeStagingRepository -Psigning.gnupg.keyName="${{ secrets.GPG_SECRET_KEY_ID }}" -Psigning.gnupg.passphrase="${{ secrets.GPG_PASSPHRASE }}" -PsonatypeUsername="${{ secrets.SONATYPE_USERNAME }}" -PsonatypePassword="${{ secrets.SONATYPE_PASSWORD }}"
+    - uses: softprops/action-gh-release@v1
       with:
-        files: "paper/plugin/build/libs/realm-format-paper-plugin-${{ github.event.release.tag_name\
-          \ }}.jar\nmodifier/agent/build/libs/realm-format-modifier-agent.jar\n"
+        files: |
+          paper/plugin/build/libs/realm-format-paper-plugin-${{ github.event.release.tag_name }}.jar
+          modifier/agent/build/libs/realm-format-modifier-agent.jar
