--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ spotless.apply=false
 
 dev=true
 
-org.gradle.parallel=true
+org.gradle.parallel=false
 org.gradle.jvmargs=\
   --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
@@ -15,4 +15,10 @@ org.gradle.jvmargs=\
   --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
 
 shade.package=io.github.portlek.realm.shaded
-relocations=cloud.commandframework,tr.com.infumia,org.spongepowered,dev.morphia,org.mariadb.jdbc,io.leangen.geantyref,io.github.shiruka
+relocations=cloud.commandframework,\
+  tr.com.infumia,\
+  org.spongepowered,\
+  dev.morphia,\
+  org.mariadb.jdbc,\
+  io.leangen.geantyref,\
+  io.github.shiruka
