--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,18 @@
+[versions]
+cloud = "1.8.1"
+task = "0.1.4"
+event = "0.1.3"
+junit = "5.9.2"
+
 [libraries]
 paper = { module = "io.papermc.paper:paper-api", version = "1.19.3-R0.1-SNAPSHOT" }
 lombok = { module = "org.projectlombok:lombok", version = "1.18.26" }
 annotations = { module = "org.jetbrains:annotations", version = "24.0.0" }
 terminable = { module = "tr.com.infumia:terminable", version = "0.1.4-SNAPSHOT" }
-task-common = { module = "tr.com.infumia:TaskCommon", version = "0.1.4" }
-task-bukkit = { module = "tr.com.infumia:TaskBukkit", version = "0.1.4" }
-event-common = { module = "tr.com.infumia:EventCommon", version = "0.1.3" }
-event-paper = { module = "tr.com.infumia:EventPaper", version = "0.1.3" }
+task-common = { module = "tr.com.infumia:TaskCommon", version.ref = "task" }
+task-bukkit = { module = "tr.com.infumia:TaskBukkit", version.ref = "task" }
+event-common = { module = "tr.com.infumia:EventCommon", version.ref = "event" }
+event-paper = { module = "tr.com.infumia:EventPaper", version.ref = "event" }
 versionmatched = { module = "tr.com.infumia:versionmatched", version = "0.1.6-SNAPSHOT" }
 nbt = { module = "io.github.shiruka:nbt", version = "2.0.1-SNAPSHOT" }
 zstd = { module = "com.github.luben:zstd-jni", version = "1.5.4-1" }
@@ -21,16 +27,16 @@ gson = { module = "com.google.code.gson:gson", version = "2.10.1" }
 mariadb = { module = "org.mariadb.jdbc:mariadb-java-client", version = "3.1.2" }
 adventure-configurate = { module = "net.kyori:adventure-serializer-configurate4", version = "4.12.0" }
 configurate-yaml = { module = "org.spongepowered:configurate-yaml", version = "4.2.0-SNAPSHOT" }
-cloud-core = { module = "cloud.commandframework:cloud-core", version = "1.8.1" }
-cloud-annotations = { module = "cloud.commandframework:cloud-annotations", version = "1.8.1" }
-cloud-paper = { module = "cloud.commandframework:cloud-paper", version = "1.8.1" }
-cloud-brigadier = { module = "cloud.commandframework:cloud-brigadier", version = "1.8.1" }
-cloud-tasks = { module = "cloud.commandframework:cloud-tasks", version = "1.8.1" }
-cloud-minecraft-extras = { module = "cloud.commandframework:cloud-minecraft-extras", version = "1.8.1" }
+cloud-core = { module = "cloud.commandframework:cloud-core", version.ref = "cloud" }
+cloud-annotations = { module = "cloud.commandframework:cloud-annotations", version.ref = "cloud" }
+cloud-paper = { module = "cloud.commandframework:cloud-paper", version.ref = "cloud" }
+cloud-brigadier = { module = "cloud.commandframework:cloud-brigadier", version.ref = "cloud" }
+cloud-tasks = { module = "cloud.commandframework:cloud-tasks", version.ref = "cloud" }
+cloud-minecraft-extras = { module = "cloud.commandframework:cloud-minecraft-extras", version.ref = "cloud" }
 javassist = { module = "org.javassist:javassist", version = "3.29.2-GA" }
 snakeyaml = { module = "org.yaml:snakeyaml", version = "1.33" }
-junit-api = { module = "org.junit.jupiter:junit-jupiter-api", version = "5.9.2" }
-junit-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version = "5.9.2" }
+junit-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit" }
+junit-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit" }
 smol = { module = "io.github.portlek:smol", version = "0.2.2-SNAPSHOT" }
 
 [plugins]
