--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,9 @@ relocations=cloud.commandframework,\
   org.mariadb.jdbc,\
   io.leangen.geantyref,\
   io.github.shiruka
+
+shadow.enabled=false
+shadow.relocation=false
+smol.enabled=false
+smol.relocation=false
+maven.publish=false
