--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.jvmargs=\
   --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
 
-shade.package=io.github.portlek.realm.shaded
+shade.package=io.github.portlek.realmformat.shaded
 relocations=cloud.commandframework,\
   tr.com.infumia,\
   org.spongepowered,\
