--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,4 @@
-project.name=realm-format
-
 version=1.0.0-SNAPSHOT
-
-spotless.apply=false
 
 dev=true
 
@@ -14,7 +10,7 @@ org.gradle.jvmargs=\
   --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
 
-shade.package=io.github.portlek.realm.shaded
+shade.package=io.github.portlek.realmformat.shaded
 relocations=cloud.commandframework,\
   tr.com.infumia,\
   org.spongepowered,\
@@ -25,6 +21,4 @@ relocations=cloud.commandframework,\
 
 shadow.enabled=false
 shadow.relocation=false
-smol.enabled=false
-smol.relocation=false
 maven.publish=false
