--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
     - run: |
         [[ "${{ github.event.release.tag_name }}" =~ ^[0-9]+(\.[0-9]+)*$ ]] || exit -1
         chmod +x gradlew
-        ./gradlew -Pversion="${{ github.event.release.tag_name }}" build -Pspotless.apply=true
+        ./gradlew -Pversion="${{ github.event.release.tag_name }}" build
         ./gradlew -Pversion="${{ github.event.release.tag_name }}" -Pdev=false publishToSonatype closeAndReleaseSonatypeStagingRepository -Psigning.gnupg.keyName="${{ secrets.GPG_SECRET_KEY_ID }}" -Psigning.gnupg.passphrase="${{ secrets.GPG_PASSPHRASE }}" -PsonatypeUsername="${{ secrets.SONATYPE_USERNAME }}" -PsonatypePassword="${{ secrets.SONATYPE_PASSWORD }}"
     - uses: softprops/action-gh-release@v1
       with:
