--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -38,4 +38,4 @@ jobs:
     - run: |
         [[ "${{ steps.release.outputs.tag_name }}" =~ ^[0-9]+(\.[0-9]+)*$ ]] || exit -1
         chmod +x gradlew
-        ./gradlew -Pversion="${{ steps.release.outputs.tag_name }}-SNAPSHOT" -Pspotless.apply=true -Pdev=false publishToSonatype closeAndReleaseSonatypeStagingRepository -Psigning.gnupg.keyName="${{ secrets.GPG_SECRET_KEY_ID }}" -Psigning.gnupg.passphrase="${{ secrets.GPG_PASSPHRASE }}" -PsonatypeUsername="${{ secrets.SONATYPE_USERNAME }}" -PsonatypePassword="${{ secrets.SONATYPE_PASSWORD }}"
+        ./gradlew -Pversion="${{ steps.release.outputs.tag_name }}-SNAPSHOT" -Pdev=false publishToSonatype closeAndReleaseSonatypeStagingRepository -Psigning.gnupg.keyName="${{ secrets.GPG_SECRET_KEY_ID }}" -Psigning.gnupg.passphrase="${{ secrets.GPG_PASSPHRASE }}" -PsonatypeUsername="${{ secrets.SONATYPE_USERNAME }}" -PsonatypePassword="${{ secrets.SONATYPE_PASSWORD }}"
