--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,18 @@ relocations=cloud.commandframework,\
   dev.morphia,\
   org.mariadb.jdbc,\
   io.leangen.geantyref,\
-  io.github.shiruka
+  io.github.shiruka,\
+  org.bson,\
+  org.apache.commons.io,\
+  org.apache.commons.logging,\
+  org.checkerframework,\
+  org.slf4j,\
+  com.google.errorprone.annotations,\
+  com.github.benmanes.caffeine,\
+  com.github.luben.zstd,\
+  com.mongodb,\
+  com.sun.jna,\
+  waffle
 
 shadow.enabled=false
 shadow.relocation=false
