--- a/gradle.properties
+++ b/gradle.properties
@@ -28,7 +28,9 @@ relocations=cloud.commandframework,\
   com.github.luben.zstd,\
   com.mongodb,\
   com.sun.jna,\
-  waffle
+  waffle,\
+  com.github.zafarkhaja.semver,\
+  org.pf4j
 
 shadow.enabled=false
 shadow.relocation=false
