--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ configurate = "4.2.0-SNAPSHOT"
 task = "0.1.7-SNAPSHOT"
 event = "0.1.6-SNAPSHOT"
 junit = "5.10.0"
+log4j2 = "2.20.0"
 
 [libraries]
 spigot = { module = "org.spigotmc:spigot-api", version = "1.8.8-R0.1-SNAPSHOT" }
@@ -13,15 +14,14 @@ nbt = { module = "io.github.shiruka:nbt", version = "2.0.2" }
 zstd = { module = "com.github.luben:zstd-jni", version = "1.5.5-5" }
 redis = { module = "io.lettuce:lettuce-core", version = "6.2.6.RELEASE" }
 hikari = { module = "com.zaxxer:HikariCP", version = "5.0.1" }
-mongodb = { module = "org.mongodb:mongodb-driver-sync", version = "4.10.2" }
 commonsio = { module = "commons-io:commons-io", version = "2.13.0" }
 gson = { module = "com.google.code.gson:gson", version = "2.10.1" }
 mariadb = { module = "org.mariadb.jdbc:mariadb-java-client", version = "3.1.4" }
+mongodb = { module = "org.mongodb:mongodb-driver-sync", version = "4.10.2" }
 javassist = { module = "org.javassist:javassist", version = "3.29.2-GA" }
 snakeyaml = { module = "org.yaml:snakeyaml", version = "2.1" }
 junit-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit" }
 junit-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit" }
-
 pf4j = { module = "org.pf4j:pf4j", version = "3.9.0" }
 configurate-core = { module = "org.spongepowered:configurate-core", version.ref = "configurate" }
 configurate-yaml = { module = "org.spongepowered:configurate-yaml", version.ref = "configurate" }
@@ -36,6 +36,9 @@ task-bukkit = { module = "tr.com.infumia:task-bukkit", version.ref = "task" }
 event-common = { module = "tr.com.infumia:event-common", version.ref = "event" }
 event-bukkit = { module = "tr.com.infumia:event-bukkit", version.ref = "event" }
 versionmatched = { module = "tr.com.infumia:versionmatched", version = "0.1.6-SNAPSHOT" }
+log4j2-api = { module = "org.apache.logging.log4j:log4j-api", version.ref = "log4j2" }
+log4j2-core = { module = "org.apache.logging.log4j:log4j-core", version.ref = "log4j2" }
+log4j2-slf4j2 = { module = "org.apache.logging.log4j:log4j-slf4j2-impl", version.ref = "log4j2" }
 
 [plugins]
 spotless = { id = "com.diffplug.spotless", version = "6.20.0" }
