--- a/gradle.properties
+++ b/gradle.properties
@@ -32,7 +32,8 @@ relocations=cloud.commandframework,\
   com.github.zafarkhaja.semver,\
   org.pf4j,\
   org.apache.logging.log4j,\
-  org.apache.logging.slf4j
+  org.apache.logging.slf4j,\
+  com.lmax.disruptor
 
 shadow.enabled=false
 shadow.relocation=false
