--- a/gradle.properties
+++ b/gradle.properties
@@ -30,10 +30,7 @@ relocations=cloud.commandframework,\
   com.sun.jna,\
   waffle,\
   com.github.zafarkhaja.semver,\
-  org.pf4j,\
-  org.apache.logging.log4j,\
-  org.apache.logging.slf4j,\
-  com.lmax.disruptor
+  org.pf4j
 
 shadow.enabled=false
 shadow.relocation=false
