--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,5 +38,8 @@ jobs:
     - uses: softprops/action-gh-release@v1
       with:
         files: |
-          paper/plugin/build/libs/realm-format-paper-plugin-${{ github.event.release.tag_name }}.jar
+          bukkit/plugin/build/libs/realm-format-paper-plugin-${{ github.event.release.tag_name }}.jar
           modifier/agent/build/libs/realm-format-modifier-agent.jar
+          modules/mongo/build/libs/mongo.jar
+          modules/mariadb/build/libs/mariadb.jar
+          modules/redis/build/libs/redis.jar
